...
                                <rect key="frame" x="0.0" y="2" width="30" height="26"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="30" id="D22-fl-lNw"/>
                                    <constraint firstAttribute="width" secondItem="haB-YL-KDj" secondAttribute="height" multiplier="1:1" id="f9c-Rj-SFi"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.89999997615814209" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="購読する記事を追加" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qaR-7X-UZn">
                                <rect key="frame" x="40" y="0.0" width="129" height="30"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <color key="textColor" name="MainLabel"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
